--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "JS_Array.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/siska199/-Belajar-Dasar-Pemrograman-JavaScript-by-Dicoding#readme",
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6"
   }
 }
